--- a/html/Maintenance/Aileron Boost Tab Trim and Rigging.html
+++ b/html/Maintenance/Aileron Boost Tab Trim and Rigging.html
@@ -44,8 +44,8 @@
 
     <p class='boxWarningLargeHeader'>WARNING</p>
 
-    <p class='boxWarningLargeText'>These adjustments should be made with much care. Small changes in the rigging ofthe
-        aileron boos tabs can have significant effects on the handling qualities of the aircraft. Incorrect adjustments
+    <p class='boxWarningLargeText'>These adjustments should be made with much care. Small changes in the rigging of the
+        aileron boost tabs can have significant effects on the handling qualities of the aircraft. Incorrect adjustments
         of the tabs could lead to aircraft loss of control and an accident. Adjustments should be made in increments of
         1/2 turn per boost tab, with test flights conducted in between, until flying qualities are acceptable within
         safe limits.
