--- a/index.html
+++ b/index.html
@@ -294,6 +294,9 @@
     <script src="DocDef_5_Repairs.js"></script>
     <script src="DocDef_6_AirworthinessLimitations.js"></script>
     <script src="DocDef.js"></script>
+
+
+    <script src="code/TocPostProcess.js"></script>
 </body>
 
 </html>
