--- a/html/Maintenance/Checking the Batteries.html
+++ b/html/Maintenance/Checking the Batteries.html
@@ -1,13 +1,11 @@
-<b>Checking the Batteries</b>
-
-<p>the radio box or in the lower panel.  Wiring schematics specific to each avionics component may be obtained from manufacturer’s data.  These schematics are found in the figures section of the manual.</p>
+<p>Always wear protective clothing, rubber gloves, and a face shield when servicing batteries. The batteries are checked by determining the level of the electrolyte in each cell. First of all the battery caps are removed. Then each cell is inspected individually. Using a light if necessary, the electrolyte level should be observed at or slightly above the plastic split-ring that is visible through the filling hole. </p>
 
 <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
 <p>Battery Cutout</p>
 
 <p>If the electrolyte fluid level is low and adding fluid is necessary, the electrolyte level can be raised by adding distilled water. The battery should not be overfilled. The electrolyte level should not be more than one-quarter inch above the split ring. </p>
 
-<p>hen a battery seems weak or will not hold a charge after charging, replacing the battery may be necessary. The charge capacity of individual cells may be determined by checking the specific-gravity of the electrolyte in those cells. </p>
+<p>When a battery seems weak or will not hold a charge after charging, replacing the battery may be necessary. The charge capacity of individual cells may be determined by checking the specific-gravity of the electrolyte in those cells. </p>
 
 <p>The specific-gravity check can be done with the use of a hydrometer constructed of acid-resistant materials. The specific-gravity should range from 1.1 for a fully-discharged cell to 1.3 for a fully-charged cell. a specific-gravity of 1.260 or more is considered an adequate charge. A specific-gravity of less than 1.260 indicates charging is required. A variance of specific-gravity more than 0.1 from other cells in the battery is an indication of a weak cell and the battery should be replaced. A specific-gravity reading of 1.285 to 1.295 indicates a fully charged cell. </p>
 
