table of contents and RH navbar

--- a/html/Maintenance/Flap Actuator Removal Instructions.html
+++ b/html/Maintenance/Flap Actuator Removal Instructions.html
@@ -5,7 +5,7 @@
         to rest on boom hangers. </li>
     <div class='boxCautionMedium'>
         <p class='boxCautionMediumHeader'>CAUTION</p>
-        <p class='boxCautionLMediumText'>Have someone hold up on the flap trailing edge before the last bolt is removed.
+        <p class='boxCautionMediumText'>Have someone hold up on the flap trailing edge before the last bolt is removed.
         </p>
     </div>
 
