--- a/index.html
+++ b/index.html
@@ -284,9 +284,29 @@
 
 
 
+
+
+
+
+    <div class="sideBarRight" style="transform: rotate(-90deg);">
+        <!--
+        <p style="border: 1px solid black; width: 20em;">Description</p>
+        <p style="border: 1px solid black; width: 20em;">Maintenance</p>-->
+        <table style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr>
+                <td style="border:1px solid black; text-align: center;"><a href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="border:1px solid black; text-align: center;"><a href="#Sec_5">REPAIRS</a></td>
+                <td style="border:1px solid black; text-align: center;"><a href="#Sec_4">LUBRICATION</a></td>
+                <td style="border:1px solid black; text-align: center;"><a href="#Sec_3">INSPECTION</a></td>
+                <td style="border:1px solid black; text-align: center;"><a href="#Sec_2">MAINTENANCE</a></td>
+                <td style="border:1px solid black; text-align: center;"><a href="#Sec_1">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+
+
+
     <script src="code/DocSection.js"></script>
-
-
 
     <script src="DocDef_2_Maintenance.js"></script>
     <script src="DocDef_3_Inspections.js"></script>
