finished mx scaffolding, added suggested time limits

--- a/html/Maintenance/Low Fuel Warning System.html
+++ b/html/Maintenance/Low Fuel Warning System.html
@@ -1,4 +1,9 @@
 <div style="background-color: lightblue;">
+    <p>The low fuel warning system is shown in the schematics below.</p>
+    <p style="color:red; font-weight: bold;">FRONT PANEL SCHEMATIC</p>
+    <p style="color:red; font-weight: bold;">FRONT + REAR PANEL SCHEMATIC</p>
+    <p style="color:red; font-weight: bold;">LH and RH LIGHT FRONT PANEL SCHEMATIC</p>
+    <p style="color:red; font-weight: bold;">LH and RH LIGHT FRONT + REAR PANEL SCHEMATIC</p>
     <p><b>Operational Check</b></p>
     <ol type="1">
         <li>Drain all fuel from aircraft.</li>
@@ -14,7 +19,7 @@
         <li>Drain all fuel from aircraft.</li>
         <li>Verify functionality of the light using the push-to-test feature.</li>
         <li>Inspect wiring from light to sensors which are mounted on the most inboard rib.</li>
-        <li>Check that pin 1 on the indicator light is powered by the power bus.</li>
+        <li>Check that pin 1 on the indicator light is powered by the power bus and the "AIR/BETA/FUEL PRESS" circuit breaker.</li>
         <li>Check that the sensors are grounded to the airframe.  The ground wire runs from the sensor to the 10559 skin support.</li>
         <li>Manually operate each sensor to isolate which one is malfunctioning.  (Only one switch must be closed to illuminate the light, it will be helpful to hold one in the up or OFF position while exercising the other)</li>
     </ol>
