--- a/html/Maintenance/Suggested Time Limits.html
+++ b/html/Maintenance/Suggested Time Limits.html
@@ -9,7 +9,7 @@
         <th class="plainTableHeaderCell">Reference</tr>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">sdfsd</td>
+        <td class="plainTableNormalCell">TODO</td>
         <td class="plainTableNormalCell">Propeller Overhaul</td>
         <td class="plainTableNormalCell">per Hartzell</td>
         <td class="plainTableNormalCell">Hartzell Service Letter HC-SL-61-61Y</td>
@@ -21,10 +21,10 @@
         <td class="plainTableNormalCell">Pratt and Whitney Canada SB....</td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">BA..</td>
+        <td class="plainTableNormalCell">BA..TODO</td>
         <td class="plainTableNormalCell">Brackett Engine Air Filter (Foam)</td>
         <td class="plainTableNormalCell">12 Months</td>
-        <td class="plainTableNormalCell">&nbsp</td>
+        <td class="plainTableNormalCell">&nbsp;</td>
     </tr>
     <tr>
         <td class="plainTableNormalCell">53474-1</td>
@@ -35,7 +35,56 @@
 </table>
 
 <p>Recommended replacement intervals are provided for the following components but Air Tractor suggests they be replaced at more frequent intervals if the airplane is operated in a more severe manner such as for rice operations. </p>
-
+<table class="plainTableLarge">
+    <tr>
+        <th class="plainTableHeaderCell">Part Number</th>
+        <th class="plainTableHeaderCell">Description</th>
+        <th class="plainTableHeaderCell">Interval</th>
+        <th class="plainTableHeaderCell">Reference</tr>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">NAS156A129</td>
+        <td class="plainTableNormalCell">Fwd Main Gear Clamp Block</td>
+        <td class="plainTableNormalCell">1500 Hours</td>
+        <td class="plainTableNormalCell">&nbsp;</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">NAS154DH59</td>
+        <td class="plainTableNormalCell">Aft Main Gear Clamp Block</td>
+        <td class="plainTableNormalCell">1500 Hours</td>
+        <td class="plainTableNormalCell">&nbsp;</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">NAS158A106</td>
+        <td class="plainTableNormalCell">Inbd Main Gear Large Bolt</td>
+        <td class="plainTableNormalCell">1500 Hours</td>
+        <td class="plainTableNormalCell">&nbsp;</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">NAS148-72</td>
+        <td class="plainTableNormalCell">Axle Attach</td>
+        <td class="plainTableNormalCell">1500 Hours</td>
+        <td class="plainTableNormalCell">&nbsp;</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">NAS148-69</td>
+        <td class="plainTableNormalCell">Tail Spring Clamp Bolts</td>
+        <td class="plainTableNormalCell">1500 Hours</td>
+        <td class="plainTableNormalCell">&nbsp;</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">NAS1308-34</td>
+        <td class="plainTableNormalCell">Tail Spring Forward Bolt</td>
+        <td class="plainTableNormalCell">500 Hours</td>
+        <td class="plainTableNormalCell">&nbsp;</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">NAS154DH320</td>
+        <td class="plainTableNormalCell">Aft End Tail Spring Bolts</td>
+        <td class="plainTableNormalCell">1500 Hours</td>
+        <td class="plainTableNormalCell">&nbsp;</td>
+    </tr>
+</table>
 
 <p>In addition, Air Tractor suggests that the following inspections and actions be taken at the intervals shown.</p>
 
