javascript module implementation

--- a/index.html
+++ b/index.html
@@ -305,15 +305,16 @@
     </div>
 
 
+    <!--import done with modules in the javascript now-->
+    <!-- <script type="module" src="code/DocSection.mjs"></script>
 
-    <script src="code/DocSection.js"></script>
-
-    <script src="DocDef_2_Maintenance.js"></script>
-    <script src="DocDef_3_Inspections.js"></script>
-    <script src="DocDef_4_Lubrication.js"></script>
-    <script src="DocDef_5_Repairs.js"></script>
-    <script src="DocDef_6_AirworthinessLimitations.js"></script>
-    <script src="DocDef.js"></script>
+    <script type="module" src="DocDef_2_Maintenance.mjs"></script>
+    <script type="module" src="DocDef_3_Inspections.mjs"></script>
+    <script type="module" src="DocDef_4_Lubrication.mjs"></script>
+    <script type="module" src="DocDef_5_Repairs.mjs"></script>
+    <script type="module" src="DocDef_6_AirworthinessLimitations.mjs"></script> -->
+    
+    <script type="module" src="DocDef.js"></script>
 
 
     <script src="code/TocPostProcess.js"></script>
