--- a/index.html
+++ b/index.html
@@ -313,8 +313,10 @@
     <script type="module" src="DocDef_4_Lubrication.mjs"></script>
     <script type="module" src="DocDef_5_Repairs.mjs"></script>
     <script type="module" src="DocDef_6_AirworthinessLimitations.mjs"></script> -->
-    
-    <script type="module" src="DocDef.js"></script>
+
+    <script type="module" src="DocDef.mjs"></script>
+    <script type="module" src="RenderDoc.mjs"></script>
+
 
 
     <script src="code/TocPostProcess.js"></script>
