made a ton of files.

--- a/html/Maintenance/Flap Actuator Removal Instructions.html
+++ b/html/Maintenance/Flap Actuator Removal Instructions.html
@@ -1,6 +1,4 @@
-<b>Flap Actuator Removal Instructions</b>
-
-<ol type=”1”>
+<ol type="1">
     <li>Disconnect the motor wires at Wristlock connections in wire harness and identify wires for re-assembly.</li>
     <li>Remove the nut and washer from the AN4 bolt attaching the actuator assembly to the fuselage frame.</li>
     <li>Remove the AN4 bolt, paying close attention to the spacer bushing inside the bronze bushing, and lower the flaps
