--- a/html/Maintenance/Flap Installation.html
+++ b/html/Maintenance/Flap Installation.html
@@ -1,1 +1,1 @@
-<p>The flap is installed by reversing the procedures listed under FLAP REMOVAL.</p>
+<p>The flap is installed by reversing the procedures listed under <span style="color: red;" >FLAP REMOVAL.</span></p>
