--- a/html/Maintenance/Flaps.html
+++ b/html/Maintenance/Flaps.html
@@ -4,16 +4,4 @@
 
 <p>During 12-month inspections, the AN4-12A bolt through the push-rod should be checked for straightness, and if bent, both the bolt and bearing should be replaced immediately. At 100 hour intervals, remove the lower fuselage side skins under the cockpit and while the flaps are being cycled through the full range of travel, check to see if the push-rods drag on any fuselage parts. With the flaps full down, and then full up, move the ailerons through the full range of travel and check clearance.</p>
 
-<p>Details showing flap removal and installation are shown in Figure 25. The procedures for these operations are shown below </p>
-
-<b>Flap Removal</b>
-<ol type=”1”>
-    <li>Remove fuselage side-skin immediately inboard of the flap’s leading edge. </li>
-    <li>Partially extend the flap to gain easy access to the bolt that attaches the flap push-rod to the flap</li>
-    <li>While holding up the trailing edge of the flap, remove the AN4 bolt that attaches the flap push-rod to the flap.</li>
-    <li>Allow the trailing edge of the flap to rest on the boom hangers.</li>
-    <li>Remove the nuts from the AN4 bolts that connect the flaps to the flap-support bracket bearings.</li>
-    <li>Remove the washers and bolt from the center flap-support bearing. </li>
-    <li>With assistance in supporting the flap at both ends, remove the remaining washers and the inboard and outboard bolts. </li>
-    <li>Carefully lift the flap clear of the airplane.</li>
-</ol>
+<p>Details showing flap removal and installation are shown in <span style="color:red">Figure 25</span>. The procedures for these operations are shown below </p>
