--- a/html/Maintenance/FIRE RETARDANT DISPERSAL SYSTEM.html
+++ b/html/Maintenance/FIRE RETARDANT DISPERSAL SYSTEM.html
@@ -1,1 +1,1 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>Refer to the appropriate FRDS Maintenance Manual for service information on the FRDS. </p>
