--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -1,1 +1,15 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>Each wing tank has a finger strainer soldered to the 90° elbow at the tank outlet. This screen should be removed and cleaned at least once a year during the 12-month inspection. </p>
+
+<p>Remove the finger-strainer screen from each wing tank as follows: </p>
+
+<ol type=”1”>
+    <li>Defuel both wing tanks by use of the valve outlet in the header tank.</li>
+
+    <li>Remove the hose-end fitting from the elbow fitting that enter the fuel cell through the inboard rib of the wing. </li>
+
+    <li>Remove the elbow fitting from the tank. The strainer screen is part of the elbow fitting.</li>
+</ol>
+
+<p>After inspection and cleaning, the strainer and its fittings may be replaced by reversing the steps shown above. The threads of the elbow fitting should be cleaned and re-coated with RectorSeal 5 or equivalent fuel-resistant pipe-thread sealer. </p>
+
+<p>The firewall fuel filter is shown in Figure 46. This fuel filter may be a Fram FS1133-PLM fuel filter or an Air Tractor p/n 53114-2 fuel filter. Both fuel filters use the Air Tractor p/n 52351-1 fuel filter element.  Inspection and maintenance procedures for both fuel filters are almost identical.  The filter should be cleaned and inspected for general condition in accordance with Service Letter #229 (Fram FS1133-PLM fuel filter) or Service Letter #229A (Air Tractor p/n 53114-1 fuel filter).  A copy of these Service Letters are found in the Appendix section of your OWNERS MANUAL. </p>
