--- a/html/Maintenance/Fuel System Drains.html
+++ b/html/Maintenance/Fuel System Drains.html
@@ -1,1 +1,7 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>Refer to Figure 47 for the location of the fuel tank and header tank drains. These drains are designated for daily activation during the pilot’s walk-around inspection as shown in the AIRPLANE FLIGHT MANUAL. </p>
+
+<p>Fuel system drains and other drains on the engine are shown in Figure 51. </p>
+
+<p>The wing tanks have Curtis CCA-1650 drain valves and the header tank and the header tank has a Curtis 39000 drain valve. If the valves leak, remove them and check the seals for nicks and look for trash between the seal and the valve seat. Apply some 3H Permatex or equivalent to the threads of all drains before they are re-installed. If the seal is bad, replace the valve. </p>
+
+<p>The header tank drain has a tendency to freeze up during fertilization operations if it is not activated daily. If this should happen, replace it immediately as this is the most important drain in the system. Be careful not to cross-thread drains when replacing. </p>
