--- a/html/Maintenance/Vertical Fin.html
+++ b/html/Maintenance/Vertical Fin.html
@@ -1,1 +1,9 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>Details of the vertical fin are shown in Figure 52.  The cantilever vertical fin is attached to the fuselage frame at the front spar location with two NAS1306-13 bolts and AN365-624 nuts. It has been found that these two bolts tend to loosen in service. No doubt buffeting from the propeller slipstream during run-up and stresses from turns tend to produce constant loads from side to side that tend to loosen the nuts. </p>
+
+<p>Check the torque on the two NAS1306-13 bolts at 100 hour intervals. If the bolt is held stationary and the torque wrench applied to the nut, the torque value should be 420 inch-pounds. For the reverse of this procedure, torque should be 460 inch-pounds. </p>
+
+<p>The rear spar attaches to the fuselage frame with NAS1303 bolts of various lengths, depending on the amount of shims required between the fuselage frame and the rear spar. The shims are of various thickness (.063, .080, .125) and the upper shims are combinations of p/n 30159-1, -2, or -3 while the lower shims are combinations of p/n 30160-1, -2, or -3. </p>
+
+<p>The vertical fin rear spar is drilled on installation where the attachment is made to top longeron. If a new fin is installed, make a drill template from the original fin rear spar in order to drill the four 3/16” holes for the attachment to the upper longeron. The template should be 2.44” wide and long enough to pick up the two lower attach bolts. The template should be made of either aluminum or steel, at least .063” thick. </p>
+
+<p>Install the fin on the aircraft and install the bolts at the front and rear spar locations. Be sure the correct amount of shims is used between the fuselage frame and the rear spar.  The rear spar bolts have a torque of 60 inch-pounds at the nut. </p>
