--- a/html/Maintenance/Hopper Tanks.html
+++ b/html/Maintenance/Hopper Tanks.html
@@ -1,1 +1,21 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>The front and rear hoppers are made of Derakane and are heat-cured for greater chemical resistance. However it is not good practice to leave chemicals in the hopper overnight, especially if it is known that these chemicals have an adverse effect on fiberglass hoppers. </p>
+
+<p>The hoppers attach to the fuselage frame with AN6C11A, C33A, and C34A bolts and MS21044-C6 nuts. The connecting fairings 80469-1 (2 ea.) and plate (80616-1) are attached to the hopper flanges with 90015-7 (5/8 long) screws, MS21044C3 nuts, and AN960C10 washers. It is very important that the fairings are carefully sealed with PRC1422-B2 to prevent chemical leaks from getting on the wing splice connection. </p>
+
+<p>The wing center splice fittings may be inspected by removing only the front hopper. To remove the rear hopper it is necessary to remove the windshield. </p>
+
+<p>Details of the upper view of the hopper tanks are shown in Figure 16. To remove the hopper tanks, the following procedures may be followed: </p>
+
+<ol type=”1”>
+    <li>Remove the hopper gate box and gate box adapter per procedures shown under <b>Hopper Gate Box and Adapter.</b> </li>
+    <li>Remove the fuselage side skins on both sides of the hopper tank. </li>
+    <li>If the front hopper is to be removed, remove the upper engine cowl skins.</li>
+    <li>Remove the hopper lid.</li>
+    <li>If the rear hopper is to be removed, remove the windshield and rear hopper-to-fuselage fairings.</li>
+    <li>Remove the wide stainless-steel band that connects the hopper tanks beneath the hopper lid.</li>
+    <li>Using a chain hoist with 2 X 6 board across the bottom of the hopper throat, apply slight upward pressure to relieve load on hopper supports.</li>
+    <li>Remove all bolts from the hopper supports and braces that secure the hopper tank to the fuselage structure. Movement of the chain hoist will be necessary to relieve the load on the attaching bolts.</li>
+    <li>Use caution to hold the chain in the center of the opening in the top of the hopper and gently lift the hopper	clear of the aircraft.</li>
+</ol>
+
+<p>Replacement of the hopper is done by reversing the order of the above procedure. Clean all sealing surfaces and apply new sealant and gaskets. </p>
