--- a/html/Maintenance/Spray Plumbing.html
+++ b/html/Maintenance/Spray Plumbing.html
@@ -1,1 +1,7 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>Details of the spray plumbing are shown in Figure 64. </p>
+
+<p>The plumbing from the hopper gate box to the spray pump consists of a p/n 80385-4 tube assembly and an 80376-1 hose attached to the 80385-4 tube. The hose is clamped with QS200M56S clamps which are entirely stainless. </p>
+
+<p>The plumbing from the discharge side of the pump to the valve is p/n 80636-1 and has a p/n 80743-2 coupler at the valve end. The hoses are p/n 80399-1 and are double clamped with QS200M48S clamps. In addition a QS200M36S clamp is attached to the 80636-1 tube just outboard of the hose at the pump and p/n 80655-1 strap is used to safety the clamp to the top of the pump to prevent the 80636-1 tube from blowing off due to high pressure and water hammer effects. </p>
+
+<p>The tube attaching to the strainer is p/n 80637-1 assembly (2 ea.). The straps on the support assemblies are p/n 80383-1 and are attached with AN4C6A bolts. D4-13T-303 Faspins are used to attach the support assemblies to the fuselage frame. </p>
