--- a/html/Maintenance/Windshield.html
+++ b/html/Maintenance/Windshield.html
@@ -1,1 +1,31 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>Details of the windshield are shown in Figure 59. </p>
+
+<p>For the plexiglass portion of the windshield be careful to always use a clean, soft cotton or microfiber rag (never a paper towel) and plastic windshield cleaner to prevent scratches. There are several commercially available products for cleaning plastic such as Plexus, All Kleer, and Clear View.  A mixture of equal parts water and hydrogen peroxide also makes a good plastic windshield cleaner.  DO NOT use any cleaner that contains ammonia or the plexiglass will be damaged.  It is also important to clean the windshield by gently rubbing the surface up and down, not in a circular motion.  Cleaning in a circular motion may cause a halo effect on your windshield. </p>
+
+<p>If a crack is found near one of the attaching screws, stop-drill with a no. 30 drill bit that is specifically designed for plexiglass.  The side windshields are p/n 11197-1 (L/H) and p/n 11197-2 (R/H) for the 802 and p/n 11197-3 (L/H) and p/n 11197-4 (R/H) for the 802A. </p>
+
+<p>The safety-glass center windshield can be cleaned with a soft rag and any good glass cleaner. The center windshield p/n is 10665-1 for the AT-802 and p/n 11248-1 for the AT-802A. </p>
+
+<p>The windshield is sealed around the upper and lower edge under the metal flanges with commercial grade putty. Then the entire perimeter of the windshield is sealed with PR1422-A2 (See FUEL TANKS in Section 2 for mixing instructions). Drill .166 holes through the windshield to match the aluminum attachments. Then remove the windshield and enlarge the holes in the windshield to 3/16” to prevent the attach screws from over-stressing and cracking the windshield at any location. </p>
+
+<p>To remove any of the windshields, the following procedure may be followed: </p>
+
+<ol type=”1”>
+    <li>Remove all of the #10 screws that secure the upper and lower retaining strips on the outside of the windshield.</li>
+    <li>Remove all of the #10 screws in the retaining strips on the left-hand-and right-hand sides of the respective portion of the windshield that is to be removed.  </li>
+    <li>Remove the retaining strips and associated fasteners and fittings that surround the subject windshield panel.</li>
+    <li>Gently pry the windshield free from the sealing strip beneath. Pry gently around the perimeter of the panel with a putty knife or other suitable flexible, wide-blade tool.</li>
+    <li>Lift the windshield panel free of the airplane.</li>
+</ol>
+
+The sealant may be removed from the edges of the panel and the windshield recess in the windshield frame by scraping gently with a dull blade. The plate glass may be cleaned with the use of acetone or methyl-ethyl-ketone (MEK). 
+<div class=”boxCautionLarge”>
+    <p class=”boxCautionLargeHeader”>CAUTION</p>
+    <p class=”boxCautionLargeText”>The use of solvents on the plastic panels will distort the surfaces and render them unstable.</p>
+</div>
+
+<p>The windshield may be reinstalled by reversing the removal steps above. After the windshield is in place, it should be resealed on its outer surface using Courtaulds Aerospace PR 14-22 B-2 sealant. The sealant is catalyzed with supplied material. </p>
+
+<p>The best method to apply the sealant is to mask the retaining strips first and then mask the windshield leaving 1/8” of windshield surface exposed between the tape and the retaining strip. Apply the sealant sparingly to the exposed windshield surface, then remove masking tape. </p>
+
+<p>The sealant starts to cure when catalyzed, so time is precious when applying sealant. The sealant should be allowed a 24-hour cure before stressing. </p>
