--- a/html/Maintenance/Filling the Hopper Tanks.html
+++ b/html/Maintenance/Filling the Hopper Tanks.html
@@ -1,1 +1,17 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>Normal filling of the hopper tanks is accomplished by use of either of the single point filling connections that are located below and aft of the inboard end of the wing flaps. </p>
+
+<p>In normal operations, spray solutions are pumped directly into the airplane’s hoppers from a remote storage tank. A male quick disconnect fitting and flow-control valve are provided at both of the single point filling connections. </p>
+
+<p>After a quick disconnect hose is attached to the filling connection, the filling valve is opened and the solution is pumped into the hopper tanks at a rate up to 500 gallons per minute. The quantity of material in the tanks can be monitored by use of the hopper quantity gauge that is mounted in the side of the fuselage, just above the single point connections. </p>
+
+<p>The hopper tanks are vented to allow the release of air that is displaced during the filling process at a filling rate up to 500 gallons per minute. The hopper vents normally will not accommodate the flow of liquid in the event the tanks are overfilled. An over-fill protection valve has been installed on later models, which allows passage of hopper liquid out through the vent tubes. </p>
+
+<div class=”boxCautionLarge”>
+    <p class=”boxCautionLargeHeader”>CAUTION</p>
+    <p class=”boxCautionLargeText”>Structural damage to the hopper tanks can occur if the tanks are overfilled using the single-point filling connections. It is imperative that the hopper quantity gauges are montitored through the filling process and the flow of materials is shut off prior to the tanks becoming full. Sufficient margin should be allowed to ensure that the quantity of material in the tanks does not exceed their FULL level.</p>
+</div>
+
+<p>When the desired hopper tank quantity is reached, the valve is closed and the quick disconnect hose is removed, allowing a quick return of the aircraft to service. </p>
+
+<p>Alternatively, the hoppers may be filled using the doors in the tops of the hopper tanks. </p>
+
