--- a/html/Maintenance/Elevator Trim Tab Controls.html
+++ b/html/Maintenance/Elevator Trim Tab Controls.html
@@ -1,1 +1,13 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>Details of the elevator trim tab cockpit controls are shown in Figure 8.  The elevator trim tab system uses the elevator tabs as both trim tabs and as elevator boost tabs. The boost tabs function to relieve a portion of the control load during maneuvers. </p>
+
+<p>Elevator trim is controlled by a handwheel on the left-hand wall of the cockpit. The handwheel is shaft-connected to a two-sheave drum that drives two taut and opposing cables. These are connected at their opposite end to a pulley shaft that positions a worm gear in a gear box that is located in the aft fuselage. The worm-gear box is shown in Figure 18. </p>
+
+<p>The worm gear drives a sector gear with an exposed sector arm attached on the aft side of the gatebox. The sector arm is connected by a pushrod to a bellcrank that transmits the motion to an idler just forward of the aft edge of the horizontal stabilizer. One of these idlers is shown in Figure 70.  </p>
+
+<p>The bellcrank has output arms on both the right and left ends. Each of these ends connects to an idler in each of the horizontal stabilizers. Motion is then transmitted via dual control pushrods to the control horns of the elevator tabs on both sides of the airplane.  The worm-and-sector arrangement allows the selected position of the tab to be maintained by sliding-face friction between the worm gear and the gear sector. If the trim tabs creep in flight, rework the friction bellville washers as detailed in SIL 802-0043. </p>
+
+<p>A p/n 70742-1 trim bellcrank is attached to the fuselage frame with AN3-14A bolts, Bunting P26-8 bushings, p/n 70065-1 spacer bushings, AN365-1032 nuts, and AN960-10 washers under the nuts. The bellcrank should be removed during 12-month inspections and the bushings inspected for wear and lubricated. </p>
+
+<p>The push-rods from the trim bellcrank to the idler arm on the stabilizer rear spar are p/n 70532-1 and are adjustable. The ends are AN485-4 clevis ends with AN316-4 check nuts Attachments are with AN3-6 bolts, AN310-3 nuts, AN960-10 washers, and MS24665-151 cotters.  The push-rods going forward from the bellcrank is p/n 70756-1 and has a Fafnir REB3N bearing attached to the bellcrank with a AN3-7A bolt, AN970-3 washer under the bolt head, AN960-10L washer under the AN365-1032 nut. </p>
+
+<p>Fairleads are p/n 70122-1 with 40081-00 snap rings. The forward end going into the cockpit connects to the top hole in the trim lever with the same hardware as connecting to the trim bellcrank. </p>
