--- a/html/Maintenance/Weight and Balance.html
+++ b/html/Maintenance/Weight and Balance.html
@@ -1,1 +1,1 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>The proper maintenance of weight and balance records is important to ensure that the airplane is operated within the weight and center of gravity limits that are established in the Flight Manual. The weight-and-balance diagram with sample calculation is shown in Figure 80. The airplane must be weighed in the attitude described under LEVELING. </p>
