--- a/html/Maintenance/Wing Center Splice Connection.html
+++ b/html/Maintenance/Wing Center Splice Connection.html
@@ -1,1 +1,36 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>Details of the wing center-splice connection are shown in Figure 83. </p>
+
+<p>The main spar caps of each wing are attached to each other with p/n 20976-1/-2 (Upper), 21082-1/-2 (Lower) attach blocks. The main spar webs are attached to each other by p/n 20994-2 plate of .59” thick heat treated 4130 steel. The connection to the fuselage on the aircraft centerline is made with a p/n 20618-1 steel plate of .125 4130N connected to the fuselage structure with two AN6-25A bolts, and to the two 3/4” bolts through the 20976-1 upper spar cap attach block. There are four p/n 20606-1 tube-nut welded assemblies and two p/n 20608-1 sleeves in each wing installation. The sleeves and tube-nuts are drilled 23/64” and reamed .374 after the tube-nuts have been fully tightened, and two AN6-21A bolts installed in each sleeve. If the wings are removed from the aircraft, it is usually necessary to replace the four tube-nut assemblies and the two sleeves since the .374 reamed holes through both parts will probably not line up. In this case, tighten the new tube-nuts 1920 inch-pounds torque, position the new sleeves mid-way between the tube nuts, drill 23/64” through the sleeve and tube-nut, and ream .374 for the AN6-21A bolt installation. </p>
+
+<p>The tube-nut and sleeve installation is to take the “kick-load” imposed by dihedral angle and cancel it out by transferring this load from the upper spar caps to the lower spar caps. </p>
+
+<p>To remove the wings, or to inspect the wing center splice connection properly, the front hopper should be removed. </p>
+
+<p>Torque values should be checked on the nuts to learn if the bolts have elongated or if fretting has loosened the fit of the joint. Torque values to be checked are as follows: </p>
+
+<p>300 inch-pounds on the 3/8” nut </p>
+
+<p>550 inch-pounds on the 7/16” nut </p>
+
+<p>800 inch-pounds on the 1/2” nut </p>
+
+<p>1,100 inch-pounds on the 9/16” nut </p>
+
+<p>1,700 inch-pounds on the 5/8” nut </p>
+
+<p>2,800 inch-pounds on the 3/4” nut </p>
+
+<p>1,920 inch-pounds on the 3/4” tube-nut assembly </p>
+
+<p>There are seven 90050-6-25 bolts through the small leg of each spar cap that attach to the 20994-2 plate on the aft side of the web. On the lower spar caps, there are an additional three 90050-6-22 bolts through the small leg of each cap and seven 90050-6-22 bolts through the spar web plates. These 3/8” nuts are checked for torque (300 inch-pounds). The two NAS1304-26, eight NAS1304-22, and ten NAS1304-25 bolts through the 20994-2 plate and spar have a torque of 100 inch-pounds applied to the nut. The six NAS1305-22 and eight NAS1305-26 bolts have a torque of 200 in -lbs applied at the nut. The two NAS1205-26 screws have a torque of 150 in-lbs applied at the nuts. </p>
+
+<p>Inspect the entire splice connection carefully for signs of bolt working, corrosion, or cracks. The critical area for cracks is the lower spar cap at station 10.3” from the aircraft center-line where the 3/8” NAS bolt attaches the 21082-1 and -2 blocks to the main leg of the cap. If a crack were to develop at that point, it would probably progress out of the 3/8 bolt hole across the cap at station 10.8” where the most inboard of the seven 90050-6-25 bolts are located. The next critical area of the lower spar cap would be in the lock bolt pattern attaching the small leg to the web from approximate stations 25.0” to 30.0” which is where the inboard fuel tank wall is located. It would also be advisable to check carefully the lower side of the main leg in the area where the fuel tank bottom ends. </p>
+
+<p>Always use a new nut for replacement after a nut is removed. </p>
+
+<p>For appropriate inspection intervals of the wing center splice connection, see the INSPECTION section of this manual. If a new wing is to be installed, contact the factory for wing installation instructions at the time the wing is ordered. </p>
+
+<div class=‘boxCautionLarge’>
+    <p class=‘boxCautionLargeHeader’>CAUTION</p>
+    <p class=‘boxCautionLargeText’>Consult the factory for tools, jigs, and fixtures to ensure proper installation of a new wing.</p>
+</div>
