ac section updates

--- a/html/Maintenance/Compressor Replacement.html
+++ b/html/Maintenance/Compressor Replacement.html
@@ -1,60 +1,28 @@
-<p><b>C. Removing and Replacing the Compressor </b></p>
-
+<p class="dontBreakAfter"><b>Compressor Removal</b></p>
 <p>To remove the compressor, these steps should be followed: </p>
-<p>-Remove all refrigerant from the system using a Freon Recovery Unit (FRU). </p>
-<p>-Remove the hose fittings at the rear of the compressor by first removing the bolt and strap that hold the T-head
-    clamp in place. The hose fittings can now be removed from the compressor’s head without tools.</p>
-<p>-Separate the wrist-lock connector in the wire that powers the clutch. </p>
-<p>-Loosen the nuts on the two AN5 pivot bolts that secure the compressor to the drive-shaft housing. </p>
-<p>-Remove safety wire and loosen the belt-tension turnbuckle and remove belts. </p>
-<p>-Remove the bolt that connects the belt-adjustment turnbuckle to the compressor case. </p>
-<p>-Support the compressor and remove the AN5 bolts and nuts that secure the compressor to the drive-shaft housing. This
-    also releases the turnbuckle that serves as a side brace. </p>
-<p>-Gently lift the compressor from the engine compartment. </p>
+<ol type="1">
+    <li>Remove all refrigerant from the system using a Freon Recovery Unit (FRU).</li>
+    <li>Remove the hose fittings at the rear of the compressor by first removing the bolt and strap that hold the T-head
+        clamp in place. The hose fittings can now be removed from the compressor’s head without tools.</li>
+    <li>Separate the wrist-lock connector in the wire that powers the clutch.</li>
+    <li>Loosen the nuts on the two AN5 pivot bolts that secure the compressor to the drive-shaft housing.</li>
+    <li>Remove safety wire and loosen the belt-tension turnbuckle and remove belts.</li>
+    <li>Remove the bolt that connects the belt-adjustment turnbuckle to the compressor case.</li>
+    <li>Support the compressor and remove the AN5 bolts and nuts that secure the compressor to the drive-shaft housing.
+        This
+        also releases the turnbuckle that serves as a side brace.</li>
+    <li>Gently lift the compressor from the engine compartment.</li>
+</ol>
 
-<p>To replace the compressor, the previous steps should be followed in the reverse order. The belts for the R12 system
-    should be tensioned to 10 lbs using a Deco densitometer or equivalent. Tension the flat serpentine belt of the R134a
-    system as described in Service Letter #159. </p>
-<p>Use compatible refrigeration oil on the O-rings at the compressor-hose fitting before reconnecting to compressor.
-    Follow evacuation and refrigerant charging instructions spelled out in this section of this manual. </p>
-
-<li><b>
-        <p>Compressor Replacement</p>
-    </b></li>
-
-<p>-It’s critical for successful compressor replacement that the new compressor is installed in a clean system with a
+<p class="dontBreakAfter"><b>Compressor Replacement</b></p>
+<p>It’s critical for successful compressor replacement that the new compressor is installed in a clean system with a
     correct oil charge. Contamination remaining in the system will be pulled into the new compressor and lodge under the
     valves and in bearings causing quick failure of the new compressor. Also it’s important to maintain the original oil
     charge amount when replacing the compressor. </p>
 
-<p><b>A. Contamination Inspection</b></p>
-<p>-Contamination from foreign material can be found by looking at the oil drained from either the compressor or the
-    suction and discharge lines. Contamination can also be seen collecting in the orifice tube or expansion valve.</p>
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-<p>-To illustrate how contamination will quickly wreck a good compressor, the photo to the right shows a small metal
-    shaving lodged under the discharge valve. The valve will open and close against the metal shaving resulting in a
-    fatigue break of the valve. The broken valve is now free to travel inside the compressor causing additional internal
-    failures. Eventually the compressor will stop pumping and over heat. </p>
+<p>To replace the compressor, the removal steps should be followed in the reverse order. <span style="color:red">The belts for the R12 system
+    should be tensioned to 10 lbs using a Deco tensiometer or equivalent. </span>Tension the flat serpentine belt of the R134a
+    system as described in <span style="color: red">Service Letter #159</span> . </p>
 
-<p><b>B. Oil Amount (Flushed System or New Systems)</b></p>
-<p>-Systems which have no oil in them due to flushing or the system is being built from new components will require oil
-    amounts in accordance with the oil charging section requirements in this manual. </p>
-<p><b>Note:</b></p> <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-<p>-The factory oil charge for the compressor can be found on the compressor label. For total system required oil
-    amount, see Section 2C, System Requirements. Also see oil charging section of this manual for additional
-    information. </p>
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-<p><b>Oil Amount (Compressor swap, no flushing)</p></b>
-<p>-The goal of this procedure is to measure the oil amount in the failed compressor and adjust the amount in the new
-    compressor to equal that of the failed. </p>
-<p>a) Remove the oil plug from the failed compressor and drain as much oil as possible into a suitable container. </p>
-<p>b) Drain oil from the suction and discharge ports into a suitable container while turning the shaft clockwise only
-    with a socket wrench on the armature retaining nut. </p>
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-<p>c) Measure and record the amount of oil drained from the compressor. </p>
-<p>d) Drain oil from the new compressor following steps a) and b). </p>
-<p>e) Add oil back into the new compressor in an amount equal measurement taken in step c). </p>
-<p>f) Re-install oil plug. Seal and O-ring must be clean and not damaged. Torque to 11-15 ft•lb (15-20 N•m, 150-200
-    kgf•cm). Be careful not to cross thread the oil plug</p>
-
+<p>Use refrigeration oil on the O-rings at the compressor-hose fitting before reconnecting to compressor.
+    Follow evacuation and refrigerant charging instructions spelled out in this section of this manual. </p>
