--- a/html/Maintenance/R134a Information.html
+++ b/html/Maintenance/R134a Information.html
@@ -1,23 +1,17 @@
-<p><b>R134a/PAG Oil Handling Precautions</b></p>
-<p style="color: red;">This manual focuses on service information for Sanden compressors intended for use with R134a and
-    PAG oils. </p>
 <ol type="A">
-    <li>Always follow safety precautions</li>
+    <li>Always follow safety precautions.</li>
     <li>Do not discharge R134a into the atmosphere. Even though its ozone depletion potential is zero, it does have
         global warming potential. Recovery and recycling are mandated by the Clean Air Act. Use recovery equipment
         designated only for R134a. Never introduce another refrigerant into the R134a equipment.</li>
     <li>Never mix R134a with other refrigerants or air conditioning systems failure may to occur.</li>
-    <li>Use only Sanden specified <span style="color: red;">PAG lubricants</span> for R134a systems using Sanden
-        compressors. If other lubricants are
-        used, air conditioning system failure is likely to occur.</li>
-    <li>The Sanden specified PAG oils used in R134a systems absorb atmospheric moisture very quickly. Moisture in the
-        air
-        conditioning system can cause major damage or failure.</li>
+    <li>Use only PAG lubricants for R134a systems using Sanden
+        compressors. If other lubricants are used, air conditioning system failure is likely to occur.</li>
+    <li>PAG oils used in R134a systems absorb atmospheric moisture very quickly. Moisture in the
+        air conditioning system can cause major damage or failure.</li>
     <li>Never leave PAG oil exposed to air for a prolonged time. Tightly reseal the oil container immediately after each
         use.</li>
     <li>During air conditioning system repair, cap all fittings as soon as opened and leave capped until just before
-        they
-        are reconnected.</li>
+        they are reconnected.</li>
     <li>If a repair is performed on an R134a compressor or system, evacuate the system for at least 30 minutes before
         recharging to ensure the removal of moisture which may have been absorbed by the PAG oil in the compressor and
         system.</li>
@@ -125,22 +119,3 @@
 </table>
 <p></p>
 
-<p class="dontBreakAfter"><b>AT-802/802A System Refrigerant Requirement</b></p>
-<table class="plainTableLarge">
-    <tr>
-        <td class="plainTableHeaderCell"></td>
-        <td class="plainTableHeaderCell"> Single Condenser System </td>
-        <td class="plainTableHeaderCell"> Dual Condenser System</td>
-    </tr>
-    <tr>
-        <td class="plainTableHeaderCell">Oil</td>
-        <td class="plainTableNormalCell rightAlignText">10.5 oz (310cc)</td>
-        <td class="plainTableNormalCell rightAlignText">11.8 oz (349 cc) </td>
-    </tr>
-    </tr>
-    <tr>
-        <td class="plainTableHeaderCell">Refrigerant</td>
-        <td class="plainTableNormalCell rightAlignText">3 lbs (1.36 kg)</td>
-        <td class="plainTableNormalCell rightAlignText">3 lbs 3 oz (1.45 kg) </td>
-    </tr>
-</table>
