--- a/html/Maintenance/Windshield.html
+++ b/html/Maintenance/Windshield.html
@@ -10,7 +10,7 @@
 
 <p>To remove any of the windshields, the following procedure may be followed: </p>
 
-<ol type=”1”>
+<ol type="1">
     <li>Remove all of the #10 screws that secure the upper and lower retaining strips on the outside of the windshield.</li>
     <li>Remove all of the #10 screws in the retaining strips on the left-hand-and right-hand sides of the respective portion of the windshield that is to be removed.  </li>
     <li>Remove the retaining strips and associated fasteners and fittings that surround the subject windshield panel.</li>
@@ -19,9 +19,9 @@
 </ol>
 
 The sealant may be removed from the edges of the panel and the windshield recess in the windshield frame by scraping gently with a dull blade. The plate glass may be cleaned with the use of acetone or methyl-ethyl-ketone (MEK). 
-<div class=”boxCautionLarge”>
-    <p class=”boxCautionLargeHeader”>CAUTION</p>
-    <p class=”boxCautionLargeText”>The use of solvents on the plastic panels will distort the surfaces and render them unstable.</p>
+<div class="boxCautionSmall">
+    <p class="boxCautionLargeHeader">CAUTION</p>
+    <p class="boxCautionLargeText">The use of solvents on the plastic panels will distort the surfaces and render them unstable.</p>
 </div>
 
 <p>The windshield may be reinstalled by reversing the removal steps above. After the windshield is in place, it should be resealed on its outer surface using Courtaulds Aerospace PR 14-22 B-2 sealant. The sealant is catalyzed with supplied material. </p>
