--- a/html/Maintenance/Diagnosis of Compressor Failure.html
+++ b/html/Maintenance/Diagnosis of Compressor Failure.html
@@ -1,95 +1,116 @@
-<li><b>Diagnosis Confirmation of Compressor Failure</b></li>
-<p>The compressor is the most expensive component in the air conditioning system loop. Steps A through D should be used
-    to determine if the compressor is functioning correctly or not and prevent removal of a good compressor. </p>
+<p>The compressor is the most expensive component in the air conditioning system loop. The procedure in this section should be used
+    to determine if the compressor is functioning correctly. </p>
 
-<p><b>A. Compressor Rotation Test</b></p>
 
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
+<ol type="A">
+    <li>Compressor Rotation Test
+        <p>Most internal compressor failures can be quickly identified by performing a shaft rotation test. Normal
+            rotation of
+            the compressor shaft should be smooth without catching or binding.</p>
+        <p>Compressors which bind or hang during the shaft rotation test have an internal part which is broken or
+            contamination
+            preventing compressor operation. This compressor should be removed and replaced with a new unit.</p>
+        <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
+    </li>
+    <li>Clutch Inspection
+        <ol type="a">
+            <li>Voltage Check
+                <p>Confirm that the clutch is receiving at a minimum 23 V. If voltage
+                    is not being received at the clutch run a diagnostic on the vehicle electrical system. (Note:
+                    perform test with
+                    power applied to coil to fully load the circuit)</p>
+            </li>
+            <li>Pulley or Rotor Spin Check
+                <p>With clutch disengage the pulley should spin freely with no wobbling or roughness/vibration</p>
+            </li>
+            <li>Air Gap Check
+                <p>Air gaps exceeding 0.051” (1.3 mm) can prevent engagement. This often is noticed after the clutch and
+                    compressor
+                    temperature is heated through normal use.</p>
+                <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
+            </li>
+            <li>Resistance Check
+                <p>Field coils with internal shorts can be tested by measuring resistance across the field coil. Resistance should fall
+                    within 14 Ω and 18.2 Ω at room temperature.</p>
+            </li>
+        </ol>
+    </li>
+    <li>Pressure or Pumping Test
+        <p>Compressors cause refrigerant to flow through the system by creating a pressure differential, high and low
+            pressures. If the compressor can be forced to produce a high pressure in excess of 350 psig it is a good compressor.</p>
+        <div class="boxCautionMedium">
+            <p class="boxCautionMediumHeader">NOTE</p>
+            <p class="boxCautionMediumText">This test must be performed with a full system charge. Confirm the system is charged per
+                Air Tractor requirements in this section before proceeding.</p>
+        </div>
+        <div class="boxCautionMedium">
+            <p class="boxCautionMediumHeader">CAUTION</p>
+            <p class="boxCautionMediumText">This test should only be run for a short time period. Shut the system down immediately
+                once 350 psig is achieved.</p>
+        </div>
+        <ol type="a">
+            <li>Disconnect electric cooling fan. The condenser can also be blocked with sheet of card board. The purpose is to
+                limit heat removal from the system and build compressor discharge pressure.</li>
+            <li>Start engine and engage clutch.</li>
+            <li>Compressors operating within specification should be capable of reaching 350 psig.</li>
+        </ol>
 
-<p>-Most internal compressor failures can be quickly identified by performing a shaft rotation test. Normal rotation of
-    the compressor shaft should be smooth without catching or binding.</p>
-<p>-Compressors which bind or hang during the shaft rotation test have an internal part which is broken or contamination
-    preventing compressor operation. This compressor should be removed and replaced with a new unit. </p>
-
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-<p>a) Voltage Check</p>
-<p><b>12 Volts</b></p>
-<p>-Confirm that the clutch is receiving at a minimum11.5 V or 23 V for 12 V and 24 V systems respectively. If voltage
-    is not being received at the clutch run a diagnostic on the vehicle electrical system. (Note: perform test with
-    power applied to coil to fully load the circuit) </p>
-<p>-Pulley or Rotor Spin Check</p>
-<p>-With clutch disengage the pulley should spin freely with no wobbling or roughness/vibration </p>
-
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-<p>b) Air Gap Check</p>
-<p>-Air gaps exceeding 0.051” (1.3 mm) can prevent engagement. This often is noticed after the clutch and compressor
-    temperature is heated through normal use.</p>
-
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-<p><b>3.2 Ohms</b></p>
-
-<p>c) Resistance Check</p>
-<p>-Field coils with internal shorts can be tested by measuring resistance across the field coil. Resistance should fall
-    within these values. </p>
-<p>--12 Volt coil resistance should measure between2.8 Ω and 4.4 Ω @ room temperature </p>
-<p>--24 Volt coil resistance should measure between 14 Ω and 18.2 Ω @ room temperature </p>
-
-<b>
-    <p>C. Pressure or Pumping Test</p>
-</b>
-<p>-Compressors cause refrigerant to flow through the system by creating a pressure differential, high and low
-    pressures. If the compressor can be forced to produce a high pressure in excess of 350 psig it is a good compressor.
-</p>
-
-<p><b><u>Important:</u></b><b>This test must be performed with a full system charge! Confirm the system is charged per
-        Air Tractor requirements in this section before proceeding.</b></p>
-<p>a) Disconnect electric cooling fan. The condenser can also be blocked with sheet of card board. The purpose is to
-    limit heat removal from the system and build compressor discharge pressure. </p>
-<p>b) Start engine and engage clutch. </p>
-<p>c) Compressors operating within specification should be capable of reaching 350 psig. </p>
-<p><b><u>Important:</u></b><b>This test should only be run for a short time period. Shut the system down immediately
-        once 350 psig is achieved.</b>
-
-    <b>
-        <p>D. Leak Checking</p>
-    </b>
-<p>a) Visual Inspection</p>
-<p>Although oil seepage does not necessarily indicate leakage of refrigerant, it should be considered a sign that a leak
-    may exist. Look for the following items: </p>
-<p>-Oil seepage in shaft seal area (between clutch and compressor) - repairable. </p>
-<p>-Pinching or extrusion of front housing O-ring – non-repairable. </p>
-<p>-Oil around cylinder head (gaskets, service valves, fittings) - repairable. </p>
-<p>-Oil around oil plug - repairable. </p>
-<p>-Stripped threads – non-repairable. </p>
-<p>-Oil around crack in compressor body – non-repairable. </p>
-<p>b) Soap Bubble Detetcion</p>
-<p>-Soap bubbles are a means to detect gross leaks. In general one very small bubble released per second is equal to 40
-    oz of refrigerant loss per year. Finding leaks smaller than 40 ounces per year requires an electronic detector. </p>
-<p>c) Shop Type Electronic Detectors</p>
-<p>-Ensure that the detector being used is sensitive to R134a refrigerant. Many leak detectors intended for R-12 cannot
-    detect R134a leaks. Use the leak detector in accordance with the manufacturer's instructions. The leak rate at any
-    portion of the compressor should not exceed 1.0 oz./yr. Make sure that a suspected leak is an actual flow of
-    refrigerant, not a small pocket of refrigerant trapped in a recess. Cleaning the suspect area with soap and water
-    (never a solvent) or blowing off the area with compressed air can help confirm a suspected leak. </p>
-<p>d) Leak Detection Dyes</p>
-<p>-Leak detection dyes are to be used in accordance with the manufactures instructions.</p>
-<p>-Leak detection dyes work by staining the system oil. So when adding dye to a system which did not initially contain
-    dye the system will need to operate for some time to allow all the oil to become stained and arrive at the leak.
-</p>
-
-<p><b>E. Noise</b></p>
-<p>a) Unusual Noise Not due to Compressor</p>
-<p>Unusual noises may be caused by components other than the compressor</p>
-<p>Compressor Mounting - Check for: </p>
-<p>-Loose belt - see belt tension specifications. </p>
-<p>-Broken bracket or compressor mounting ear. Replace broken component. </p>
-<p>-Missing, broken, or loose mounting bolts. Replace, reinstall, or tighten. </p>
-<p>-Drive pad shaft or bearing problem. Inspect drive pad bearing and shaft condition. </p>
-
-<p>b) Unusual Noises Due to Compressor</p>
-<p>-Suction pressure less than about 6 psig can cause unusual noise. Charge refrigerant to proper amount and test by
-    applying heat to evaporator to increase suction pressure. </p>
-<p>-Clutch bearing </p>
-<p>-Oil level--insufficient oil can cause unusual noise. </p>
-<p>-Compressor suction or discharge valve breakage will cause a clacking sound at idle. </p>
-<p>-If head gasket failure occurs, discharge pressure will be low and suction pressure will be high at idle. </p>
+    </li>
+    <li>Leak Checking
+        <ol type="a">
+            <li>Visual Inspection
+                <p>Although oil seepage does not necessarily indicate leakage of refrigerant, it should be considered a sign that a leak
+                    may exist. Look for the following items:</p>
+                <ul>
+                    <li>Oil seepage in shaft seal area (between clutch and compressor) - repairable.</li>
+                    <li>Pinching or extrusion of front housing O-ring – non-repairable.</li>
+                    <li>Oil around cylinder head (gaskets, service valves, fittings) - repairable.</li>
+                    <li>Oil around oil plug - repairable.</li>
+                    <li>Stripped threads – non-repairable.</li>
+                    <li>Oil around crack in compressor body – non-repairable.</li>
+                </ul>
+            </li>
+            <li>Soap Bubble Detection
+                <p>Soap bubbles are a means to detect gross leaks. In general one very small bubble released per second is equal to 40
+                    oz of refrigerant loss per year. Finding leaks smaller than 40 ounces per year requires an electronic detector.</p>
+            </li>
+            <li>Shop Type Electronic Detectors
+                <p>Ensure that the detector being used is sensitive to R134a refrigerant. Many leak detectors intended for R-12 cannot
+                    detect R134a leaks. Use the leak detector in accordance with the manufacturer's instructions. The leak rate at any
+                    portion of the compressor should not exceed 1.0 oz./yr. Make sure that a suspected leak is an actual flow of
+                    refrigerant, not a small pocket of refrigerant trapped in a recess. Cleaning the suspect area with soap and water
+                    (never a solvent) or blowing off the area with compressed air can help confirm a suspected leak.</p>
+            </li>
+            <li>Leak Detection Dyes
+                <p>Leak detection dyes are to be used in accordance with the manufactures instructions.</p>
+                <p>Leak detection dyes work by staining the system oil. So when adding dye to a system which did not initially contain
+                    dye the system will need to operate for some time to allow all the oil to become stained and arrive at the leak.</p>
+            </li>
+        </ol>
+    </li>
+    <li>Noise
+        <ol type="a">
+            <li>Unusual Noise Not due to Compressor
+                <p>Unusual noises may be caused by components other than the compressor</p>
+                <p>Compressor Mounting - Check for:</p>
+                <ul>
+                    <li>Loose belt - see belt tension specifications.</li>
+                    <li>Broken bracket or compressor mounting ear. Replace broken component.</li>
+                    <li>Missing, broken, or loose mounting bolts. Replace, reinstall, or tighten.</li>
+                    <li>Drive pad shaft or bearing problem. Inspect drive pad bearing and shaft condition.</li>
+                </ul>
+            </li>
+            <li>Unusual Noises Due to Compressor
+                <p>Check for:</p>
+                <ul>
+                    <li>Suction pressure less than about 6 psig can cause unusual noise. Charge refrigerant to proper amount and test by
+                        applying heat to evaporator to increase suction pressure.</li>
+                    <li>Clutch bearing</li>
+                    <li>Oil level--insufficient oil can cause unusual noise.</li>
+                    <li>Compressor suction or discharge valve breakage will cause a clacking sound at idle.</li>
+                    <li>If head gasket failure occurs, discharge pressure will be low and suction pressure will be high at idle.</li>
+                </ul>
+            </li>
+        </ol>
+    </li>
+</ol>
