--- a/html/Maintenance/Storage.html
+++ b/html/Maintenance/Storage.html
@@ -1,3 +1,3 @@
 <p>When leaving your airplane outside, be sure and cover the exhaust ports and keep the propeller tethered. The propeller needs to be tethered to prevent the windmilling of the power section. The reason for this is that the oil pump is in the rear of the engine and will not turn with the prop and therefore, will not provide oil to the front of the engine. Don’t be too embarrassed the first time you start the engine with the propeller tethered, I can assure you that you are not the first. </p>
 
-<p>Be sure to secure the ailerons as discussed in the section on MOORING AND TIE DOWN above. </p>
+<p>Be sure to secure the ailerons as discussed in the <xref fileTarget="" type="link">XXXXX</xref> </p>
