--- a/html/Description/Starter Generator System.html
+++ b/html/Description/Starter Generator System.html
@@ -1,14 +1,20 @@
-<p>The Lucas p/n 23048-028 250-Amp, 28-Volt starter -generator (SG) is standard in the AT-802 and AT-802A. It uses a p/n 23046-521 QAD mounting kit. The Lucas p/n 23048-02 300-amp, 28-Volt starter-generator is optional.</p>
-<p>The starter-generator system produces and controls all electrical power for the aircraft. It works with the system’s batteries and generator-control unit (GCU) to power the electrical buses. All electrical sub-systems receive their power from buses that are fed by the starter-generator system.</p>
-<p>Figure 11 shows the schematic for the 250-Amp charging system. The 250-Amp system is a standard part of the AT-802 and AT-802A. Figure 11A shows the schematic for the 300-Amp charging system. This system is optional but is required when the computer-controlled fire gate is installed. The system consists of:</p>
-<ol type=”1”>
-                <li>The Starter/Generator (S/G) - the armature is continuously engaged in the engine’s accessory gear box. The S/G functions as an electric motor for starting the engine and then as an engine driven DC Generator.</li>
-                <li>The Generator Control Unit (GCU) - The GCU is located on the right lower engine mount tube.</li>
-                <li>The Line Contractor Relay (LCR) - Located on the right side of the firewall.</li>
-                <li>The Start Relay - Located on the right side of the firewall.</li>
-                <li>The Start Switch (ST SW) located on the Lower Instrument Panel.</li>
-                <li>The Generator Switch (GEN SW) located on the Lower Instrument Panel.</li>
-                <li>The Pilots Panel Voltmeter (VM) located on the Lower Instrument Panel.</li>
-                <li>The Low Voltage Warning Light (LV LITE) located on the Upper Instrument Panel.</li>
-                <li>15 Amp GCU Circuit Breaker (15A C/B) located on the lower instrument panel.</li>
+<p>The Lucas p/n 23048-028 250-Amp, 28-Volt starter -generator (SG) is standard in the AT-802 and AT-802A. It uses a p/n
+    23046-521 QAD mounting kit. The Lucas p/n 23048-02 300-amp, 28-Volt starter-generator is optional.</p>
+<p>The starter-generator system produces and controls all electrical power for the aircraft. It works with the system’s
+    batteries and generator-control unit (GCU) to power the electrical buses. All electrical sub-systems receive their
+    power from buses that are fed by the starter-generator system.</p>
+<p>Figure 11 shows the schematic for the 250-Amp charging system. The 250-Amp system is a standard part of the AT-802
+    and AT-802A. Figure 11A shows the schematic for the 300-Amp charging system. This system is optional but is required
+    when the computer-controlled fire gate is installed. The system consists of:</p>
+<ol type="1">
+    <li>The Starter/Generator (S/G) - the armature is continuously engaged in the engine’s accessory gear box. The S/G
+        functions as an electric motor for starting the engine and then as an engine driven DC Generator.</li>
+    <li>The Generator Control Unit (GCU) - The GCU is located on the right lower engine mount tube.</li>
+    <li>The Line Contractor Relay (LCR) - Located on the right side of the firewall.</li>
+    <li>The Start Relay - Located on the right side of the firewall.</li>
+    <li>The Start Switch (ST SW) located on the Lower Instrument Panel.</li>
+    <li>The Generator Switch (GEN SW) located on the Lower Instrument Panel.</li>
+    <li>The Pilots Panel Voltmeter (VM) located on the Lower Instrument Panel.</li>
+    <li>The Low Voltage Warning Light (LV LITE) located on the Upper Instrument Panel.</li>
+    <li>15 Amp GCU Circuit Breaker (15A C/B) located on the lower instrument panel.</li>
 </ol>
