--- a/html/Inspection/Insp_PROPELLER.html
+++ b/html/Inspection/Insp_PROPELLER.html
@@ -22,7 +22,7 @@
         <td class="cellInspectionNumber">P4</td>
         <td class="cellInspectionInterval">(100)</td>
         <td class="cellInspectionText">Check propeller overspeed-solenoid circuit <span style="color: red;">as described in the Maintenance Section,
-            PROPELLER MAINTENANCE.</span> <xref>HI</xref>
+            PROPELLER MAINTENANCE.</span> <xref fileTarget="" xrefType="link" prependLabel="Section"></xref>
         </td>
     </tr>
     <tr>
